--- a/chemcloud/templates/chemical/base_reaction.html
+++ b/chemcloud/templates/chemical/base_reaction.html
@@ -16,6 +16,7 @@
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="{% static "css/landing-page.css" %}" rel="stylesheet">
+    
     <!-- django-tables2 CSS -->
     <link href="{% static "django_tables2/themes/paleblue/css/screen.css" %}"  rel="stylesheet" />
 
@@ -35,14 +36,14 @@
 <body>
 <header>
   
-  <div class="container">      
+  <div class="container col-xs-12">      
     {% include "chemical/nav_cabinet_main.html" %}    
 </div> 
 
 
 </header>
  
- <div class="container">
+ <div class="container col-xs-12">
   <div class="row">
          
     
