--- a/chemcloud/templates/chemical/reaction_detail.html
+++ b/chemcloud/templates/chemical/reaction_detail.html
@@ -39,7 +39,7 @@
       
       <tr>
         <td class="detail_caption">Описание:</td>
-        <td class="detail_value"><textarea class="form-control col-xs-12"  rows="10" disabled="disabled">{{  reaction.description }}</textarea></td>
+        <td class="detail_value"><textarea class="form-control"  rows="10" disabled="disabled">{{  reaction.description }}</textarea></td>
         {% if is_owner %}
         <td class="detail_edit"  ></td>         
          <td class="detail_btns" field_name="description">
