--- a/chemcloud/templates/footer.html
+++ b/chemcloud/templates/footer.html
@@ -1,6 +1,6 @@
   <!-- Footer -->
     <footer>
-        <div class="container">
+        <div class="container col-xs-12">
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="list-inline">                        
