--- a/chemcloud/templates/chemical/problem_all.html
+++ b/chemcloud/templates/chemical/problem_all.html
@@ -1,22 +1,66 @@
 {% extends 'chemical/base_reaction.html' %}
 
 {% load staticfiles %}
-
-
+{% load render_table from django_tables2 %}
 
 {% block body_block %}
-   
-    <div class="page-header">
+	<div class="page-header">
+		<h1>Задачи</h1>
+	</div>
+	
+	<div class="page-content">
+		{% if id_reaction %} 
+			 
+					
+				
+				<div class="well well-sm col-xs-10">
+                          <h4 align="center">Создать новую задачу</h4>  
+                          <div class="row">
+                              <div class="col-xs-6"> 
+                              <button class="btn btn-info btn-md col-xs-12" type="button">
+                            Выделение маршрутов механизма реакции
+                             </button><br><br>
+                             <button class="btn btn-info btn-md col-xs-12" type="button">
+                            Прямая задача химической кинетики
+                             </button><br><br>
+                             <button class="btn btn-info btn-md col-xs-12" type="button">
+                           Обратная задача химической кинетики
+                             </button>
+                             </div>
+                              <div class="col-xs-6">
+                                  <button class="btn btn-info btn-md col-xs-12" type="button">
+                                  Анализ жесткости системы ОДУ
+                                  </button><br><br>
+                                  <button class="btn btn-info btn-md col-xs-12" type="button">
+                                  Анализ чувствительности
+                                  </button><br><br>
+                                  <button class="btn btn-info btn-md col-xs-12" type="button">
+                                  Анализ неопределенности
+                                  </button>
+                              </div>
+                              
+                          </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <hr style="width: 100%; color: gray; height: 1px; background-color:gray;"></div>
+                    </div>
+                    
+                    <div class="row">
+                    <div class="col-xs-6"> 
+                              <button class="btn btn-default btn-md col-xs-12" type="button">
+                            МНК для расчета энергий активаций
+                             </button>
+                        </div>
+                        <div class="col-xs-6"> 
+                              <button class="btn btn-default btn-md col-xs-12" type="button">
+                            Оптимизация условий
+                             </button>
+                        </div>
+                </div>
+			</div>
 
-    <h1> Задачи</h1>
-           
-            
-    </div>
-<div class="page-content">
-        
-            
-
-</div>          
-
-            </div>
+				
+		{% endif %}
+	</div>
 {% endblock %}
+       			
