--- a/chemcloud/templates/chemical/problem_all.html
+++ b/chemcloud/templates/chemical/problem_all.html
@@ -59,6 +59,24 @@
                 </div>
 			</div>
 
+            <div class="row">
+        <h2>Breadcrumb Rainbow</h2>
+        <div class="btn-group btn-breadcrumb">
+            <a href="#" class="btn btn-primary"><i class="glyphicon glyphicon-home"></i></a>
+            <a href="#" class="btn btn-info">Snippets</a>
+            <a href="#" class="btn btn-success">Breadcrumbs</a>
+            <a href="#" class="btn btn-warning">Rainbow</a>
+        
+        
+                <button type="button" class="btn btn-default btn-arrow-left">Default</button>
+<button type="button" class="btn btn-primary btn-arrow-left">Primary</button>
+<button type="button" class="btn btn-success btn-arrow-left">Success</button>
+<button type="button" class="btn btn-link">Link</button>
+<button type="button" class="btn btn-info btn-arrow-right">Info</button>
+<button type="button" class="btn btn-warning btn-arrow-right">Warning</button>
+<button type="button" class="btn btn-danger btn-arrow-right">Danger</button>
+</div>
+	</div>
 				
 		{% endif %}
 	</div>
