--- a/chemcloud/templates/chemical/reaction_all.html
+++ b/chemcloud/templates/chemical/reaction_all.html
@@ -10,42 +10,50 @@
                 <h1>Реакции</h1>
             </div>
             <div class="page-content">
-           
-                <div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-body"> 
-          <a class = "btn btn-new" href = "{% url 'reaction_new' %}" role = "button">Добавить реакцию</a> <!-- TODO: убрала из кнопки pull-left. Без него кнопка становится нормальной ссылкой, хоть и сбивается выравнивание -->
-       
-          
-                   
-                     
-     <div class="container">
+            
+            <div class="well well-md"> 
 	<div class="row" >
-        <div class="col-md-6">
-    		
-            <div id="custom-search-input pull-right">
+        <div class="col-xs-12">
+         <a class = "btn btn-new" href = "{% url 'reaction_new' %}" role = "button">Добавить реакцию</a>         
+         
+         <br><br>
+        </div>
+        
+    </div>
+      	<div class="row" >
+      <div class="col-xs-12">            
+            
+           
+          <div id="custom-search-input">
                 <div class="input-group col-md-12">
-                    <input type="text" class="form-control input-md" placeholder="Введите строку для поиска" />
+                    <input type="text" id="search" class="form-control input-md" placeholder="Введите строку для поиска" 
+                     value= {% if searched %} "{{searched}}"{% else %} ""{% endif %}
+                    />
                     <span class="input-group-btn">
-                        <button class="btn btn-info btn-md" type="button">
+                        <button class="btn btn-info btn-md" type="button" id="search_btn">
                             <i class="glyphicon glyphicon-search"></i>
                         </button>
                     </span>
+                    
                 </div>
             </div>
-        </div>
-	</div>
-</div>
-
-  
-</div>
-            
-            
- 
-
-            </div>
-          
+            <div><span id="txtHint"></span></div>
+       
            
-             {% render_table reaction %}
             </div>
+        </div>
+        
+             
+          
+        
+        
+	</div>
+ </div>
+
+
+<div> {% render_table reaction %}</div>
+                      
+                      
+                      
+                       
 {% endblock %}
