--- a/chemcloud/templates/chemical/substance_all.html
+++ b/chemcloud/templates/chemical/substance_all.html
@@ -15,7 +15,8 @@
     <div class="page-header">
                 <h1>Справочник веществ</h1>
                 
-
+</div>
+            <div class="page-content">
   <!-- Default panel contents -->
  
          
