Задача, типы задач, урлы, вью, пустышки шаблонов для Задач

--- a/chemcloud/templates/chemical/problem_all.html
+++ b/chemcloud/templates/chemical/problem_all.html
@@ -17,7 +17,7 @@
                           <h4 align="center">Создать новую задачу</h4>  
                           <div class="row">
                               <div class="col-xs-6"> 
-                              <button class="btn btn-info btn-md col-xs-12" type="button">
+                              <button class="btn btn-info btn-md col-xs-12" type="button" disabled="disabled">
                             Выделение маршрутов механизма реакции
                              </button><br><br>
                              <button class="btn btn-info btn-md col-xs-12" type="button">
@@ -28,7 +28,7 @@
                              </button>
                              </div>
                               <div class="col-xs-6">
-                                  <button class="btn btn-info btn-md col-xs-12" type="button">
+                                  <button class="btn btn-info btn-md col-xs-12" type="button" disabled="disabled">
                                   Анализ жесткости системы ОДУ
                                   </button><br><br>
                                   <button class="btn btn-info btn-md col-xs-12" type="button">
@@ -58,7 +58,7 @@
                         </div>
                 </div>
 			</div>
-
+<!--
             <div class="row">
         <h2>Breadcrumb Rainbow</h2>
         <div class="btn-group btn-breadcrumb">
@@ -77,7 +77,7 @@
 <button type="button" class="btn btn-danger btn-arrow-right">Danger</button>
 </div>
 	</div>
-				
+	-->			
 		{% endif %}
 	</div>
 {% endblock %}
