--- a/chemcloud/templates/chemical/problem_all.html
+++ b/chemcloud/templates/chemical/problem_all.html
@@ -17,26 +17,26 @@
                           <h4 align="center">Создать новую задачу</h4>  
                           <div class="row">
                               <div class="col-xs-6"> 
-                              <button class="btn btn-info btn-md col-xs-12" type="button" disabled="disabled">
+                              <a class="btn btn-info btn-md col-xs-12" role="button" disabled="disabled">
                             Выделение маршрутов механизма реакции
-                             </button><br><br>
-                             <button class="btn btn-info btn-md col-xs-12" type="button">
+                             </a><br><br>
+                            <a class="btn btn-info btn-md col-xs-12" role = "button" href = "{% url 'problem_new' id_reaction 1 %}">
                             Прямая задача химической кинетики
-                             </button><br><br>
-                             <button class="btn btn-info btn-md col-xs-12" type="button">
+                             </a><br><br>
+                             <a class="btn btn-info btn-md col-xs-12" role="button" href = "{% url 'problem_new' id_reaction 2 %}">
                            Обратная задача химической кинетики
-                             </button>
+                             </a>
                              </div>
                               <div class="col-xs-6">
-                                  <button class="btn btn-info btn-md col-xs-12" type="button" disabled="disabled">
+                                  <a class="btn btn-info btn-md col-xs-12" role="button" disabled="disabled">
                                   Анализ жесткости системы ОДУ
-                                  </button><br><br>
-                                  <button class="btn btn-info btn-md col-xs-12" type="button">
+                                  </a><br><br>
+                                  <a class="btn btn-info btn-md col-xs-12" role="button" href = "{% url 'problem_new' id_reaction 4 %}">
                                   Анализ чувствительности
-                                  </button><br><br>
-                                  <button class="btn btn-info btn-md col-xs-12" type="button">
+                                  </a><br><br>
+                                  <a class="btn btn-info btn-md col-xs-12" role="button" href = "{% url 'problem_new' id_reaction 3 %}">
                                   Анализ неопределенности
-                                  </button>
+                                  </a>
                               </div>
                               
                           </div>
@@ -47,17 +47,19 @@
                     
                     <div class="row">
                     <div class="col-xs-6"> 
-                              <button class="btn btn-default btn-md col-xs-12" type="button">
+                              <a class="btn btn-default btn-md col-xs-12" role="button" href = "{% url 'problem_new' id_reaction 7 %}">
                             МНК для расчета энергий активаций
-                             </button>
+                             </a>
                         </div>
                         <div class="col-xs-6"> 
-                              <button class="btn btn-default btn-md col-xs-12" type="button">
+                              <a class="btn btn-default btn-md col-xs-12" role="button" href = "{% url 'problem_new' id_reaction 6 %}">
                             Оптимизация условий
-                             </button>
+                             </a>
                         </div>
                 </div>
 			</div>
+			
+			{% render_table problems %}
 <!--
             <div class="row">
         <h2>Breadcrumb Rainbow</h2>
