Исправления верстки и немного по Задачам

--- a/chemcloud/templates/chemical/problem_init.html
+++ b/chemcloud/templates/chemical/problem_init.html
@@ -1,1 +1,25 @@
-Problem init
+{% extends 'chemical/base_reaction.html' %}
+
+{% load staticfiles %}
+
+
+{% block body_block %}
+	<div class="page-header">
+	{% include "chemical/problem_edit_header.html" %} 
+		
+
+	
+	</div>
+		<div class="page-content">
+			
+				<table>
+					<tr>
+						<td>Название:</td>
+						<td>rere</td>
+					</tr>					
+					
+				</table>
+			
+
+            </div>
+{% endblock %}
