--- a/chemcloud/static/custom/other.css
+++ b/chemcloud/static/custom/other.css
@@ -37,12 +37,18 @@ color: #FEC63D;
     position: relative;
     padding-left: 18px;
     padding-right: 18px;
+    white-space:normal !important;
+    word-wrap:break-word;
 }
 .btn-arrow-right {
     padding-left: 36px;
+    white-space:normal !important;
+    word-wrap:break-word;
 }
 .btn-arrow-left {
     padding-right: 36px;
+    white-space:normal !important;
+    word-wrap:break-word;
 }
 .btn-arrow-right:before,
 .btn-arrow-right:after,
