--- a/chemcloud/templates/chemical/base_cabinet.html
+++ b/chemcloud/templates/chemical/base_cabinet.html
@@ -12,8 +12,9 @@
 
     <title>CloudChem - {% block title %} Set title{% endblock %}</title>
 
-    <!-- Bootstrap Core CSS -->
+  <!-- Bootstrap Core CSS -->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+   
     <!-- Custom CSS -->
    
     <!-- django-tables2 CSS -->
@@ -31,6 +32,9 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
+     
+    
     {% block header_block %}  {% endblock %}
 </head>
 
@@ -42,13 +46,13 @@
 </div> 
 </header>
    
-
-<div class="container col-xs-12">
+<div class="row">
+<div class="container ">
    
   {% block body_block %}  {% endblock %}
 </div>
    
-   
+   </div>
     {% include "footer.html" %}
 
     <!-- jQuery -->
