--- a/chemcloud/templates/chemical/base_reaction.html
+++ b/chemcloud/templates/chemical/base_reaction.html
@@ -42,7 +42,7 @@
 
 
 </header>
- 
+ <div class="row">
  <div class="container col-xs-12">
   <div class="row">
          
@@ -66,7 +66,8 @@
    
     </div>
    
-  </div> 
+  </div>
+    </div>
     {% include "footer.html" %}
     <!-- jQuery -->
     <script src="{% static "js/jquery.js" %}"></script>
