--- a/chemcloud/templates/chemical/experiment_detail.html
+++ b/chemcloud/templates/chemical/experiment_detail.html
@@ -13,22 +13,22 @@
     </div>
 	
 	
-	<div class="page-content"> 
-  <div class="row">          
+	<div class="page-content">
+  <div class="row">
  <div class="col-xs-7">
  <div>
- 
+
   <table class="table ">
     <tbody id="detail_main" model_name="Experiment" url_edit="{% url 'experiment_detail_edit' id_reaction experiment.pk %}" >
-      
+
 				
 					<tr>
         <td class="detail_caption">Название:</td>
         <td class="detail_value"><input class="box_input"  type="text" disabled="disabled" value="{{  experiment.name }}"/></td>
         {% if is_owner %}
-        <td class="detail_edit" > </td>         
+        <td class="detail_edit" > </td>
          <td class="detail_btns" field_name="name">
-     
+
         </td>
         {% endif %}
       </tr>
@@ -43,21 +43,21 @@
         <td class="detail_caption">Описание:</td>
         <td class="detail_value"><textarea class="form-control"  rows="10" disabled="disabled">{{  experiment.description }}</textarea></td>
         {% if is_owner %}
-        <td class="detail_edit"  ></td>         
+        <td class="detail_edit"  ></td>
          <td class="detail_btns" field_name="description">
-      
+
         </td>
         {% endif %}
       </tr>
-      
+
       <tr>
         <td class="detail_caption ">Избранное:</td>
         <td class="detail_value "><input  type="checkbox" disabled="disabled" value="{{  experiment.is_favorite }}"
          {% if experiment.is_favorite %} checked="checked" {% endif %}/></td>
         {% if is_owner %}
-        <td class="detail_edit "  ></td>         
+        <td class="detail_edit "  ></td>
          <td class="detail_btns " field_name="is_favorite">
- 
+
         </td>
         {% endif %}
       </tr>
@@ -65,7 +65,7 @@
 					
 					<tr>
 						<td class="detail_caption">Функция:</td>
-						<td class="detail_value">{{ experiment.id_func }}</td>
+						<td class="detail_value">{{ experiment.func }}</td>
 					</tr>
 					<tr>
 						<td class="detail_caption">Единица измерения:</td>
@@ -73,7 +73,7 @@
 					</tr>
 					<tr>
 						<td class="detail_caption">Аргумент:</td>
-						<td class="detail_value">{{ experiment.id_arg }}</td>
+						<td class="detail_value">{{ experiment.arg }}</td>
 					</tr>
 					<tr>
 						<td class="detail_caption">Единица измерения:</td>
@@ -117,7 +117,7 @@
       </div>
 
 
-           
+
 
 </div>
 {% endblock %}
