--- a/chemcloud/templates/chemical/substance_detail.html
+++ b/chemcloud/templates/chemical/substance_detail.html
@@ -59,7 +59,7 @@
       
       <tr>
         <td class="detail_caption ">Заряд:</td>
-        <td class="detail_value "><input type="number" id="replyNumber" min="-300" step="1" data-bind="value:replyNumber" value="{{  substance.charge }}"/></td>
+        <td class="detail_value "><input type="number" disabled="disabled" id="replyNumber" min="-300" step="1" data-bind="value:replyNumber" value="{{  substance.charge }}"/></td>
         {% if is_owner %}
         <td class="detail_edit " ></td>         
          <td class="detail_btns " field_name="charge">
