поправлено сохранение стадий с учетом спец символов и кириллицы. Выравнены кнопочки в таблице

--- a/chemcloud/static/custom/other.css
+++ b/chemcloud/static/custom/other.css
@@ -99,3 +99,8 @@ color: #FEC63D;
 .btn-arrow-left:after { /* hide arrow tails background */
     background-color: white;
 }
+
+.div-right {
+	clear: both;
+    float:right;
+}
