Убрала в деталях вещества кнопку Добавить вещество

--- a/chemcloud/templates/chemical/substance_detail.html
+++ b/chemcloud/templates/chemical/substance_detail.html
@@ -141,7 +141,8 @@
             {% else %}Нет{% endif %}</h5>
             
             
-            <a class = "btn btn-new" href = "{% url 'substance_new' %}" role = "button">Добавить вещество</a> 
+      <!--      <a class = "btn btn-new" href = "{% url 'substance_new' %}" role = "button">Добавить вещество</a> 
+      -->
     <br><br>
             {% render_table substance_consist %}
         </div> 
