--- a/chemcloud/templates/chemical/experiment_edit.html
+++ b/chemcloud/templates/chemical/experiment_edit.html
@@ -70,6 +70,11 @@
 </div>
 Вид:
 
+{% for react_feature in react_features %}
+          <h4> {{ react_feature.feature.name }} </h4>
+{% endfor %}
+
+
 <input type="radio" checked>Таблица
 <input type="radio">График
 
